[package]
name = "tokio-utils"
version = "0.0.0"
description = "Async Pool"
authors = ["Will Cygan <wcygan.io@gmail.com>"]
categories = ["asynchronous", "concurrency"]
keywords = ["asynchronous", "utilities"]
repository = "https://github.com/wcygan/tokio-utils"
homepage = "https://github.com/wcygan/tokio-utils"
edition = "2021"
license = "MIT"

[dependencies]
