[package]
name = "tokio-utils"
# When publishing a new version:
# - Update README.md
# - Build the crate to update the version in Cargo.lock
version = "0.1.1"
description = "Tools for asynchronous programming in Tokio applications"
authors = ["Will Cygan <wcygan.io@gmail.com>"]
categories = ["asynchronous", "concurrency"]
keywords = ["asynchronous", "concurrency", "utilities"]
repository = "https://github.com/wcygan/tokio-utils"
homepage = "https://github.com/wcygan/tokio-utils"
edition = "2021"
license = "MIT"

[dependencies]
tub = "0.3.7"
async-throttle = "0.3.2"
shutdown-async = "0.1.1"
async-stdin = "0.3.1"